--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.1.1",
+    "@mui/material": "^7.2.0",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-dom": "^1.0.2",
     "react-hook-form": "^7.61.0",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^7.7.0",
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "zod": "^4.0.8"
   },
   "devDependencies": {
